# OkalaR

./: .Rbuildignore  .Renviron  .gitignore  .lintr  DESCRIPTION  LICENSE  NAMESPACE  README.md  okalaR.Rproj
Label_update/: P0031_label_update.R  P0071_label_update.R
NatureCubePy/: README.md  pyproject.toml
NatureCubePy/.github/workflows/: python.yml
NatureCubePy/src/naturecubepy/: __init__.py  api.py  phone_observations.py
NatureCubePy/tests/: test_api.py  test_phone_observations.py
R/: api.R  okalaR-package.R  phone_observations.R  project_file.R
data/: domestic_animals.json  fungi_iucn.json
man/: add_IUCN_labels.Rd  add_project_labels.Rd  auth_headers.Rd  auth_headers_dev.Rd  build_device_settings.Rd  build_feature_record.Rd  build_observation.Rd  build_observation_payload.Rd  check_edna_labels.Rd  chunksize.Rd  collect_media_files.Rd  getIUCNLabels.Rd  get_key.Rd  get_media_assets.Rd  get_project.Rd  get_project_labels.Rd  get_station_info.Rd  okalaR-package.Rd  okalaR.Rd  phone_types.Rd  plot_stations.Rd  push_new_labels.Rd  push_new_timestamps.Rd  push_phone_observations.Rd  reexports.Rd  sendupatedlabels.Rd  set_segment_blank_status.Rd  update_media_timestamps.Rd  upload_edna_records.Rd  upload_phone_observations.Rd  validate_observation_payload.Rd
project_data_labels/: Webinar.R  data-2024-12-19T13_55_40.946Z.CSV
tests/: Build file.R  P0031_label_update.R
tutorials/: landlife.R  phone_observations_example.R  project_file.R  project_file.Rmd  project_file.html  test_timestamp.R  test_timestamp.Rmd  test_tree_upload.R  update_labels.Rmd  (+1 more)
(+10 files in other folders)
