[project]
name = "naturecubepy"
version = "0.1.0"
description = "Python wrapper around the Okala dashboard API services"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Adam Varley", email = "adam@okala.io" }
]
keywords = ["okala", "ecology", "api", "biodiversity", "edna"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "pandas>=3.0.2",
]

[project.urls]
Homepage = "https://github.com/Okala-Ltd/OkalaR"
Repository = "https://github.com/Okala-Ltd/OkalaR"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
